# JobsAnalysis

./: .gitignore  CODE_SUMMARY.MD  README.md  app.py  mcp_server.py  pyproject.toml  requirements.txt
data/: analytics.json
pages/: 2_🔍_MCP_Demo.py  3_📊_Analytics.py  4_⚖️_Compare_Resumes.py
prompts/: system_instructions.md
src/: analytics_manager.py  helper.py  improvement_suggestions.py  job_api.py  mcp_client.py  pdf_generator.py
