[project]
name = "jobsanalysis"
version = "0.1.0"
description = "AI-Powered Job Recommender with MCP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.1.0",
    "fastmcp>=0.1.0",
    "streamlit>=1.28.0",
    "openai>=1.0.0",
    "pymupdf>=1.23.0",
    "python-dotenv>=1.0.0",
    "apify-client>=1.6.0",
    "requests>=2.31.0",
]

